--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -99,6 +99,10 @@ button, .button
 aside .current, footer .current
   background-color lighten(SECONDARY, 15%)
 
+aside li, footer button
+  &:hover
+    background-color lighten(SECONDARY, 15%)
+
 div[data-element="notification"] > div.window
   background-color rgba(0,0,0,0.8)
 
