--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -11,6 +11,7 @@ input
       &.circle, &.square
         -webkit-appearance none
         -moz-appearance none
+        appearance none
         cursor pointer
         border-width 1px
         border-style solid
@@ -29,6 +30,7 @@ input
       appearance none
       -webkit-appearance none
       -moz-appearance none
+      appearance none
       cursor pointer
       height 24px
       width 44px
@@ -58,23 +60,13 @@ input
         &:after
           border-radius 26px
 
-input[type="range"]
-  -webkit-user-select none
-  -khtml-user-select none
-  -moz-user-select none
-  -ms-user-select none
-  user-select none
-  -webkit-appearance none
-  width 100%
-  height 7px
-  margin-top 10px
-  margin-bottom 10px
-  border-radius 3.5px
-  border-width 1px
-  border-style solid
-  margin-left 0
-
-  &::-moz-range-track
+  &[type="range"]
+    -webkit-user-select none
+    -khtml-user-select none
+    -moz-user-select none
+    -ms-user-select none
+    user-select none
+    -webkit-appearance none
     width 100%
     height 7px
     margin-top 10px
@@ -82,15 +74,48 @@ input[type="range"]
     border-radius 3.5px
     border-width 1px
     border-style solid
+    margin-left 0
 
-  &::-webkit-slider-thumb
+    &::-moz-range-track
+      width 100%
+      height 7px
+      margin-top 10px
+      margin-bottom 10px
+      border-radius 3.5px
+      border-width 1px
+      border-style solid
+
+    &::-webkit-slider-thumb
+      -webkit-appearance none
+      height 26px
+      width 26px
+      border-radius 50%
+
+    &::-moz-range-thumb
+      height 26px
+      width 26px
+      border-radius 50%
+
+  &[type="text"], &[type="password"], &[type="date"], &[type="datetime"], &[type="email"], &[type="number"], &[type="search"], &[type="tel"], &[type="time"], &[type="url"], select, textarea, label
     -webkit-appearance none
-    height 26px
-    width 26px
-    border-radius 50%
+    -moz-appearance none
+    appearance none
+    display inline-block
+    box-sizing border-box
+    width 100%
+    padding 5px
+    font-size FONT_SIZE_BIG
+    box-shadow(none)
+    border-style solid
+    border-width 0.15em
 
-  &::-moz-range-thumb
-    height 26px
-    width 26px
-    border-radius 50%
+    &.no_border
+      border none
+
+    &.no_background
+      background-color rgba(0,0,0,0)
+
+    &.line
+      border none
+
 
