--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -175,5 +175,14 @@ input[type="range"]
     border 1px solid darken(BACKGROUND, 10%)
     box-shadow inset 0 0 10px darken(BACKGROUND, 6%)
 
+input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea, label
+  color TEXT
+  border-color darken(BACKGROUND, 20%)
+
+  &.line
+    background bottom left linear-gradient(darken(BACKGROUND, 20%), darken(BACKGROUND, 20%)) no-repeat, bottom center linear-gradient(darken(BACKGROUND, 20%), darken(BACKGROUND, 20%)) repeat-x, bottom right linear-gradient(darken(BACKGROUND, 20%), darken(BACKGROUND, 20%)) no-repeat
+    background-size 1px 6px, 1px 1px, 1px 6px
+
+
 
 
