input.line restyled

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -108,6 +108,8 @@ input
     box-shadow(none)
     border-style solid
     border-width 0.15em
+    margin-top 2.5px
+    margin-bottom 2.5px
 
     &.no_border
       border none
