Input.line working on mobile devices

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -110,6 +110,7 @@ input
     border-width 0.15em
     margin-top 2.5px
     margin-bottom 2.5px
+    border-radius 0
 
     &.no_border
       border none
@@ -128,6 +129,8 @@ li
   & fieldset
     margin-top -8px
     margin-bottom -8px
+    padding-left 0
+    padding-right 0
 
 fieldset
   border none
