--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -180,6 +180,9 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
   border-color darken(BACKGROUND, 20%)
 
   &.line
+    background bottom left -webkit-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat, bottom center -webkit-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) repeat-x, bottom right -webkit-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat
+    background bottom left -moz-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat, bottom center -moz-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) repeat-x, bottom right -moz-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat
+    background bottom left -o-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat, bottom center -o-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) repeat-x, bottom right -o-linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat
     background bottom left linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat, bottom center linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) repeat-x, bottom right linear-gradient(darken(BACKGROUND, 30%), darken(BACKGROUND, 30%)) no-repeat
     background-size 2px 8px, 2px 2px, 2px 8px
 
