Improvements for android 2.3

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -89,12 +89,12 @@ input
       -webkit-appearance none
       height 26px
       width 26px
-      border-radius 50%
+      border-radius 13px
 
     &::-moz-range-thumb
       height 26px
       width 26px
-      border-radius 50%
+      border-radius 13px
 
   &[type="text"], &[type="password"], &[type="date"], &[type="datetime"], &[type="email"], &[type="number"], &[type="search"], &[type="tel"], &[type="time"], &[type="url"], select, textarea, label
     -webkit-appearance none
