--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -187,6 +187,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
     border-color LINE_COLOR_FOCUS
 
   &.line
+    background bottom left -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR), color-stop(100%, LINE_COLOR)) no-repeat, bottom center -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR), color-stop(100%, LINE_COLOR)) repeat-x, bottom right -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR), color-stop(100%, LINE_COLOR)) no-repeat
     background bottom left -webkit-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat, bottom center -webkit-linear-gradient(LINE_COLOR, LINE_COLOR) repeat-x, bottom right -webkit-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat
     background bottom left -moz-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat, bottom center -moz-linear-gradient(LINE_COLOR, LINE_COLOR) repeat-x, bottom right -moz-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat
     background bottom left -o-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat, bottom center -o-linear-gradient(LINE_COLOR, LINE_COLOR) repeat-x, bottom right -o-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat
@@ -194,6 +195,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
     background-size 2px 8px, 2px 2px, 2px 8px
 
     &:focus
+      background bottom left -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR_FOCUS), color-stop(100%, LINE_COLOR_FOCUS)) no-repeat, bottom center -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR_FOCUS), color-stop(100%, LINE_COLOR_FOCUS)) repeat-x, bottom right -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR_FOCUS), color-stop(100%, LINE_COLOR_FOCUS)) no-repeat
       background bottom left -webkit-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat, bottom center -webkit-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) repeat-x, bottom right -webkit-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat
       background bottom left -moz-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat, bottom center -moz-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) repeat-x, bottom right -moz-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat
       background bottom left -o-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat, bottom center -o-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) repeat-x, bottom right -o-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat
