--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -192,7 +192,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
     background bottom left -moz-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat, bottom center -moz-linear-gradient(LINE_COLOR, LINE_COLOR) repeat-x, bottom right -moz-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat
     background bottom left -o-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat, bottom center -o-linear-gradient(LINE_COLOR, LINE_COLOR) repeat-x, bottom right -o-linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat
     background bottom left linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat, bottom center linear-gradient(LINE_COLOR, LINE_COLOR) repeat-x, bottom right linear-gradient(LINE_COLOR, LINE_COLOR) no-repeat
-    background-size 2px 8px, 2px 2px, 2px 8px
+    background-size 1px 6px, 1px 1px, 1px 6px
 
     &:focus
       background bottom left -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR_FOCUS), color-stop(100%, LINE_COLOR_FOCUS)) no-repeat, bottom center -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR_FOCUS), color-stop(100%, LINE_COLOR_FOCUS)) repeat-x, bottom right -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, LINE_COLOR_FOCUS), color-stop(100%, LINE_COLOR_FOCUS)) no-repeat
@@ -200,8 +200,8 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
       background bottom left -moz-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat, bottom center -moz-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) repeat-x, bottom right -moz-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat
       background bottom left -o-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat, bottom center -o-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) repeat-x, bottom right -o-linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat
       background bottom left linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat, bottom center linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) repeat-x, bottom right linear-gradient(LINE_COLOR_FOCUS, LINE_COLOR_FOCUS) no-repeat
-      background-size 2px 8px, 2px 2px, 2px 8px
+      background-size 1px 6px, 1px 1px, 1px 6px
 
-
-
+label.select
+  color darken(BACKGROUND, 20%)
 
