Added select hover

--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -205,3 +205,10 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 label.select
   color darken(BACKGROUND, 20%)
 
+  &:hover
+    color lighten(THEME, 30%)
+
+    & > select
+      color lighten(THEME, 30%)
+      border-color lighten(THEME, 30%)
+
