--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -184,6 +184,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
   border-color darken(BACKGROUND, 20%)
 
   &:focus
+    outline: none !important;
     border-color LINE_COLOR_FOCUS
 
   &.line
