--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -183,7 +183,6 @@ label.select
 
   &:after
     content "⏏"
-    // font 1.8em "Consolas", monospace
     transform rotate(180deg)
     position absolute
     font-size 2em
@@ -199,3 +198,8 @@ label.select
     border-radius 0
     margin 0
     height 32px
+
+textarea
+  line-height 1.2em
+  min-height 3em
+  height 3.5em
