Changed select icon to work on phones

--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -182,10 +182,9 @@ label.select
     display block
 
   &:after
-    content "⏏"
-    transform rotate(180deg)
+    content "▼"
     position absolute
-    font-size 2em
+    font-size 18px
     top 0
     right 0
     bottom 0
