--- a/stylesheets/TaKo.theme.styl
+++ b/stylesheets/TaKo.theme.styl
@@ -1,5 +1,6 @@
 THEME               = #FF6600
 SECONDARY           = #2f2f2f
+SECONDARY_ACTIVE    = lighten(SECONDARY, 15%)
 TEXT                = #000
 SECONDARY_TEXT      = #F4F4F4
 FAIL                = #ed1c13
@@ -23,7 +24,7 @@ FORM_color          = darken(#e5e5e5, 5%)
 FORM_border         = 2px
 FORM_border_radius  = (BORDER_radius * FORM_border)
 
-LINE_COLOR          = darken(BACKGROUND, 30%)
+LINE_COLOR          = #bfbfbf
 LINE_COLOR_FOCUS    = lighten(THEME, 35%)
 
 /* -------------------------- BUTTON -------------------------- */
@@ -59,7 +60,7 @@ footer
     background-color SECONDARY
 
   & .counter
-    background-color lighten(SECONDARY, 15%)
+    background-color SECONDARY_ACTIVE
 
 article
   background-color BACKGROUND
@@ -101,11 +102,11 @@ button, .button
     color SECONDARY_TEXT !important
 
 aside .current, footer .current
-  background-color lighten(SECONDARY, 15%)
+  background-color SECONDARY_ACTIVE
 
 aside li, footer button
   &:hover
-    background-color lighten(SECONDARY, 15%)
+    background-color SECONDARY_ACTIVE
 
 div[data-element="notification"] > div.window
   background-color rgba(0,0,0,0.8)
@@ -143,9 +144,9 @@ div[data-element="notification"] > div.window
 
 input[type="radio"], input[type="checkbox"]
   &.circle, &.square, &.switch
-    border-color darken(BACKGROUND, 25%)
-    background-color darken(BACKGROUND, 5%)
-    box-shadow inset 0 0 8px darken(BACKGROUND, 25%)
+    border-color #adadad
+    background-color #dbdbdb
+    box-shadow inset 0 0 8px #adadad
 
   &:not(.switch)
     &:checked
@@ -156,32 +157,32 @@ input[type="radio"], input[type="checkbox"]
   &.switch
     &:after
       background-color white
-      border 1px solid darken(BACKGROUND, 10%)
-      box-shadow inset 0 0 8px darken(BACKGROUND, 6%)
+      border 1px solid #d0d0d0
+      box-shadow inset 0 0 8px #d9d9d9
 
     &:checked
       border-color lighten(THEME, 30%)
       box-shadow inset 0 0 0 13px lighten(THEME, 30%)
 
 input[type="range"]
-  background-color darken(BACKGROUND, 3%)
-  border-color darken(BACKGROUND, 20%)
+  background-color #e0e0e0
+  border-color #b9b9b9
 
   &::-moz-range-track
-    background-color darken(BACKGROUND, 3%)
-    border-color darken(BACKGROUND, 20%)
+    background-color #e0e0e0
+    border-color #b9b9b9
 
   &:active
     background-color lighten(THEME, 30%)
 
   &::-webkit-slider-thumb
     background-color white
-    border 1px solid darken(BACKGROUND, 10%)
-    box-shadow inset 0 0 10px darken(BACKGROUND, 6%)
+    border 1px solid #d0d0d0
+    box-shadow inset 0 0 10px #d9d9d9
 
 input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea, label
   color TEXT
-  border-color darken(BACKGROUND, 20%)
+  border-color #b9b9b9
 
   &:focus
     outline: none !important;
@@ -204,7 +205,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
       background-size 1px 6px, 1px 1px, 1px 6px
 
 label.select
-  color darken(BACKGROUND, 20%)
+  color #b9b9b9
 
   &:hover
     color lighten(THEME, 30%)
