--- a/stylesheets/TaKo.section.styl
+++ b/stylesheets/TaKo.section.styl
@@ -22,6 +22,9 @@ section
   &.footer > article
     padding-bottom FOOTER_HEIGHT
 
+  &.no_header > article
+    top 0
+
 header
   position fixed
   top 0
