--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -202,3 +202,20 @@ textarea
   line-height 1.2em
   min-height 3em
   height 3.5em
+
+form
+
+  & fieldset
+    position relative
+    background-color white
+    border-bottom 1px solid rgba(0, 0, 0, 0.1)
+    padding 8px 10px 8px 10px
+
+    &:first-child
+      border-top 1px solid rgba(0, 0, 0, 0.1)
+
+  &.indented > fieldset
+    margin INDENT
+
+
+
