Modifications on stylesheets (for real cases) and improved index.html

--- a/stylesheets/TaKo.base.styl
+++ b/stylesheets/TaKo.base.styl
@@ -59,7 +59,7 @@ div[data-element="aside_background"]
   padding INDENT
 
 .anchor
-  width 100%
+  width 100%!important
 
 .smallest
   font-size FONT_SIZE_SMALLEST
