--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -9,7 +9,7 @@
 .white
   background-color white!important
 .grey
-  background-color grey!important
+  background-color #c0c0c0!important
 .green
   background-color green!important
 .pink
