--- a/stylesheets/TaKo.lists.styl
+++ b/stylesheets/TaKo.lists.styl
@@ -48,6 +48,7 @@ aside ul
     position relative
     font-size 1.2em
     padding 11px 10px 11px 10px
+    margin-bottom 2px
 
     &.separator
       background-color rgba(0, 0, 0, 0.1)
