--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -7,7 +7,7 @@ div[data-element="aside_background"]{position:fixed;top:50px;left:0;width:100%;h
 div[data-element="aside_background"].show{background-color:rgba(0,0,0,0.6);z-index:200}
 div[data-element="aside_background"].hide{background-color:rgba(0,0,0,0)}
 .indented > div{padding:.8em}
-.anchor{width:100%}
+.anchor{width:100% !important}
 .smallest{font-size:11px}
 .small{font-size:.9em}
 .big{font-size:1.2em}
@@ -70,9 +70,11 @@ article ul > li input[type="radio"].onright,article ul > li input[type="checkbox
 article ul > li input[type="radio"].onright.switch,article ul > li input[type="checkbox"].onright.switch{margin-top:-.4em}
 article ul.indented > li{margin:.8em}
 aside ul{list-style:none;width:100%;padding:0;margin-left:0;margin-right:0;}
-aside ul > li{position:relative;font-size:1.2em;padding:11px 10px 11px 10px;}
+aside ul > li{position:relative;font-size:1.2em;padding:11px 10px 11px 10px;margin-bottom:2px;}
 aside ul > li.separator{background-color:rgba(0,0,0,0.1);color:#fff;padding:1px 10px 1px 10px}
 
+fieldset{min-height:54px;}
+fieldset [type="radio"],fieldset [type="checkbox"]{margin-top:8px}
 input{outline:none;-webkit-user-select:text;-khtml-user-select:text;-moz-user-select:text;-ms-user-select:text;user-select:text;}
 input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle,input[type="radio"]:not(.switch).square,input[type="checkbox"]:not(.switch).square{-webkit-appearance:none;-moz-appearance:none;appearance:none;cursor:pointer;border-width:1px;border-style:solid;width:20px;height:20px}
 input[type="radio"]:not(.switch).circle,input[type="checkbox"]:not(.switch).circle{-webkit-border-radius:10px;-moz-border-radius:10px;-ms-border-radius:10px;-o-border-radius:10px;border-radius:10px}
@@ -95,18 +97,19 @@ input[type="text"].line,input[type="password"].line,input[type="date"].line,inpu
 li [type="text"],li [type="password"],li [type="date"],li [type="datetime"],li [type="email"],li [type="number"],li [type="search"],li [type="tel"],li [type="time"],li [type="url"]{margin-top:0;margin-bottom:0}
 li fieldset{margin-top:-8px;margin-bottom:-8px;padding-left:0;padding-right:0}
 fieldset{border:none;width:100%;display:block;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;-ms-box-sizing:border-box;-o-box-sizing:border-box;box-sizing:border-box;}
-fieldset label{line-height:32px;height:32px;width:20%;float:left}
-fieldset input{float:left}
-fieldset [type="text"],fieldset [type="password"],fieldset [type="date"],fieldset [type="datetime"],fieldset [type="email"],fieldset [type="number"],fieldset [type="search"],fieldset [type="tel"],fieldset [type="time"],fieldset [type="url"],fieldset select,fieldset textarea{width:80%}
+fieldset>label:not(.select){line-height:32px;height:32px;width:20%;float:left;margin-top:5px}
+fieldset>input,fieldset>select,fieldset>textarea,fieldset>label.select{float:left}
 fieldset:after{display:block;content:"";clear:both}
+fieldset>[type="text"],fieldset>[type="password"],fieldset>[type="date"],fieldset>[type="datetime"],fieldset>[type="email"],fieldset>[type="number"],fieldset>[type="search"],fieldset>[type="tel"],fieldset>[type="time"],fieldset>[type="url"],fieldset>select,fieldset>textarea,fieldset>label.select{width:80%}
+fieldset>[type="range"]{width:79%}
 label.select{margin-top:2.5px;margin-bottom:2.5px;position:relative;display:inline-block;width:100%;}
 label.select:before{content:'';right:2px;top:0;width:20px;margin:2px 0;height:28px;background:#fff;position:absolute;pointer-events:none;display:block}
 label.select:after{content:"▼";position:absolute;font-size:18px;top:0;right:0;bottom:0;line-height:32px;padding:0 7px;background:rgba(0,0,0,0);pointer-events:none}
 label.select > select{-webkit-border-radius:0;-moz-border-radius:0;-ms-border-radius:0;-o-border-radius:0;border-radius:0;margin:0;height:32px}
 textarea{line-height:1.2em;min-height:3em;height:3.5em}
-form fieldset{position:relative;background-color:#fff;border-bottom:1px solid rgba(0,0,0,0.1);padding:8px 10px 8px 10px;}
-form fieldset:first-child{border-top:1px solid rgba(0,0,0,0.1)}
-form.indented > fieldset{margin:.8em}
+form fieldset,.form fieldset{position:relative;background-color:#fff;border-bottom:1px solid rgba(0,0,0,0.1);padding:8px 10px 8px 10px;}
+form fieldset:first-child,.form fieldset:first-child{border-top:1px solid rgba(0,0,0,0.1)}
+form.indented > fieldset,.form.indented > fieldset{margin:.8em}
 
 .line{width:100%;display:block;}
 .line:after{display:block;content:"";clear:both}
@@ -210,7 +213,7 @@ div[data-element="notification"] > div.window #circular_container{width:64px;mar
 .yellow{background-color:#ff0 !important}
 .black{background-color:#000 !important}
 .white{background-color:#fff !important}
-.grey{background-color:#808080 !important}
+.grey{background-color:#c0c0c0 !important}
 .green{background-color:#008000 !important}
 .pink{background-color:#ffc0cb !important}
 .purple{background-color:#800080 !important}
@@ -218,6 +221,7 @@ div[data-element="notification"] > div.window #circular_container{width:64px;mar
 .firefox{background-color:#f60 !important}
 
 body{font:12.8px "Open Sans","Helvetica Neue",Helvetica,Arial,sans-serif;background-color:#e7e7e7}
+.theme{background-color:#ff7d26 !important}
 header{background-color:#ff7d26;background-image:-webkit-linear-gradient(#ff9c59,#f60);background-image:-moz-linear-gradient(#ff9c59,#f60);background-image:-ms-linear-gradient(#ff9c59,#f60);background-image:-o-linear-gradient(#ff9c59,#f60);background-image:linear-gradient(#ff9c59,#f60);color:#f4f4f4 !important;}
 header .counter{background-color:#ff944d}
 header .button{border:1px solid #b34700}
