--- a/stylesheets/TaKo.forms.styl
+++ b/stylesheets/TaKo.forms.styl
@@ -1,3 +1,9 @@
+fieldset
+  min-height 54px
+
+  & [type="radio"], & [type="checkbox"]
+    margin-top 8px
+
 input
   outline none
   -webkit-user-select text
@@ -145,22 +151,26 @@ fieldset
   display block
   box-sizing border-box
 
-  & label
+  &>label:not(.select)
     line-height 32px
     height 32px
     width 20%
     float left
+    margin-top 5px
 
-  & input
+  &>input, &>select, &>textarea, &>label.select
     float left
-
-  & [type="text"], & [type="password"], & [type="date"], & [type="datetime"], & [type="email"], & [type="number"], & [type="search"], & [type="tel"], & [type="time"], & [type="url"], & select, & textarea
-    width 80%
 
   &:after
     display block
     content ""
     clear both
+
+  &>[type="text"], &>[type="password"], &>[type="date"], &>[type="datetime"], &>[type="email"], &>[type="number"], &>[type="search"], &>[type="tel"], &>[type="time"], &>[type="url"], &>select, &>textarea, &>label.select
+    width 80%
+
+  &>[type="range"]
+    width 79%
 
 label.select
   margin-top 2.5px
@@ -203,7 +213,7 @@ textarea
   min-height 3em
   height 3.5em
 
-form
+form, .form
 
   & fieldset
     position relative
