Added notifications sections and finished confirm notification

--- a/package/stylesheets/TaKo.css
+++ b/package/stylesheets/TaKo.css
@@ -194,7 +194,8 @@ div[data-element="notification"] > div.window.downwards.show{-webkit-transform:t
 div[data-element="notification"] > div.window.left *{display:block;text-align:left}
 div[data-element="notification"] > div.window.left > *{display:block}
 div[data-element="notification"] > div.window.center{text-align:center;padding:1.8em;margin-top:50%}
-div[data-element="notification"] > div.window.confirm{max-width:800px;}
+div[data-element="notification"] > div.window.confirm{max-width:800px;padding:1.8em;}
+div[data-element="notification"] > div.window.confirm *{font-size:1.1em}
 div[data-element="notification"] > div.window.confirm .accept{float:left;width:48.5%}
 div[data-element="notification"] > div.window.confirm .cancel{float:right;width:48.5%}
 div[data-element="notification"] > div.window .icon{display:block;text-align:center;height:100%;width:80px;font-size:3em;float:left;margin-right:.2em}
