--- a/stylesheets/TaKo.notifications.styl
+++ b/stylesheets/TaKo.notifications.styl
@@ -61,6 +61,10 @@ div[data-element="notification"]
 
     &.confirm
       max-width 800px
+      padding 1.8em
+
+      & *
+        font-size 1.1em
 
       & .accept
         float left
