Added background-image to button colors

--- a/stylesheets/TaKo.colors.styl
+++ b/stylesheets/TaKo.colors.styl
@@ -1,22 +1,89 @@
+BLUE    = blue
+RED     = red
+YELLOW  = yellow
+BLACK   = black
+WHITE   = white
+GREY    = #c0c0c0
+GREEN   = green
+PINK    = pink
+PURPLE  = purple
+BROWN   = brown
+FIREFOX = #FF6600
+
 .blue
-  background-color blue!important
+  background-color BLUE!important
+  background-image -webkit-linear-gradient(lighten(BLUE, 15%), BLUE)!important
+  background-image -moz-linear-gradient(lighten(BLUE, 15%), BLUE)!important
+  background-image -ms-linear-gradient(lighten(BLUE, 15%), BLUE)!important
+  background-image -o-linear-gradient(lighten(BLUE, 15%), BLUE)!important
+  background-image linear-gradient(lighten(BLUE, 15%), BLUE)!important
 .red
-  background-color red!important
+  background-color RED!important
+  background-image -webkit-linear-gradient(lighten(RED, 15%), RED)!important
+  background-image -moz-linear-gradient(lighten(RED, 15%), RED)!important
+  background-image -ms-linear-gradient(lighten(RED, 15%), RED)!important
+  background-image -o-linear-gradient(lighten(RED, 15%), RED)!important
+  background-image linear-gradient(lighten(RED, 15%), RED)!important
 .yellow
-  background-color yellow!important
+  background-color YELLOW!important
+  background-image -webkit-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
+  background-image -moz-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
+  background-image -ms-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
+  background-image -o-linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
+  background-image linear-gradient(lighten(YELLOW, 15%), YELLOW)!important
 .black
-  background-color black!important
+  background-color BLACK!important
+  background-image -webkit-linear-gradient(lighten(BLACK, 15%), BLACK)!important
+  background-image -moz-linear-gradient(lighten(BLACK, 15%), BLACK)!important
+  background-image -ms-linear-gradient(lighten(BLACK, 15%), BLACK)!important
+  background-image -o-linear-gradient(lighten(BLACK, 15%), BLACK)!important
+  background-image linear-gradient(lighten(BLACK, 15%), BLACK)!important
 .white
-  background-color white!important
+  background-color WHITE!important
+  background-image -webkit-linear-gradient(lighten(WHITE, 15%), WHITE)!important
+  background-image -moz-linear-gradient(lighten(WHITE, 15%), WHITE)!important
+  background-image -ms-linear-gradient(lighten(WHITE, 15%), WHITE)!important
+  background-image -o-linear-gradient(lighten(WHITE, 15%), WHITE)!important
+  background-image linear-gradient(lighten(WHITE, 15%), WHITE)!important
 .grey
-  background-color #c0c0c0!important
+  background-color GREY!important
+  background-image -webkit-linear-gradient(lighten(GREY, 15%), GREY)!important
+  background-image -moz-linear-gradient(lighten(GREY, 15%), GREY)!important
+  background-image -ms-linear-gradient(lighten(GREY, 15%), GREY)!important
+  background-image -o-linear-gradient(lighten(GREY, 15%), GREY)!important
+  background-image linear-gradient(lighten(GREY, 15%), GREY)!important
 .green
-  background-color green!important
+  background-color GREEN!important
+  background-image -webkit-linear-gradient(lighten(GREEN, 15%), GREEN)!important
+  background-image -moz-linear-gradient(lighten(GREEN, 15%), GREEN)!important
+  background-image -ms-linear-gradient(lighten(GREEN, 15%), GREEN)!important
+  background-image -o-linear-gradient(lighten(GREEN, 15%), GREEN)!important
+  background-image linear-gradient(lighten(GREEN, 15%), GREEN)!important
 .pink
-  background-color pink!important
+  background-color PINK!important
+  background-image -webkit-linear-gradient(lighten(PINK, 15%), PINK)!important
+  background-image -moz-linear-gradient(lighten(PINK, 15%), PINK)!important
+  background-image -ms-linear-gradient(lighten(PINK, 15%), PINK)!important
+  background-image -o-linear-gradient(lighten(PINK, 15%), PINK)!important
+  background-image linear-gradient(lighten(PINK, 15%), PINK)!important
 .purple
-  background-color purple!important
+  background-color PURPLE!important
+  background-image -webkit-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
+  background-image -moz-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
+  background-image -ms-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
+  background-image -o-linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
+  background-image linear-gradient(lighten(PURPLE, 15%), PURPLE)!important
 .brown
-  background-color brown!important
+  background-color BROWN!important
+  background-image -webkit-linear-gradient(lighten(BROWN, 15%), BROWN)!important
+  background-image -moz-linear-gradient(lighten(BROWN, 15%), BROWN)!important
+  background-image -ms-linear-gradient(lighten(BROWN, 15%), BROWN)!important
+  background-image -o-linear-gradient(lighten(BROWN, 15%), BROWN)!important
+  background-image linear-gradient(lighten(BROWN, 15%), BROWN)!important
 .firefox
-  background-color #FF6600!important
+  background-color FIREFOX!important
+  background-image -webkit-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
+  background-image -moz-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
+  background-image -ms-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
+  background-image -o-linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
+  background-image linear-gradient(lighten(FIREFOX, 15%), FIREFOX)!important
