--- a/stylesheets/vendor.styl
+++ b/stylesheets/vendor.styl
@@ -42,6 +42,9 @@ box-shadow()
 background-size()
   vendor('background-size', arguments)
 
+background-image()
+  vendor('background-image', arguments)
+
 text-shadow()
   vendor('text-shadow', arguments)
 
